--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/base.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <title>Title</title>
 </head>
 <body>
@@ -35,6 +37,25 @@
                 </tbody>
             </table>
         </div>
+        <nav aria-label="Page navigation" style="text-align:center;">
+            <ul class="pagination" th:with="startNumber=${T(Math).floor(boardList.number/10)}*10+1,
+                                            endNumber=(${boardList.totalPages} > ${startNumber}+9) ? ${startNumber}+9 :
+                                            ${boardList.totalPages}">
+                <li><a href="/board/list?page=1">&laquo;</a></li>
+                <li th:style="${boardList.first} ? 'display:none'">
+                    <a th:href="@{/board/list(page=${boardList.number})}">&lsaquo;</a>
+                </li>
+                <li th:each="page : ${#numbers.sequence(startNumber, endNumber)}"
+                    th:class="(${page} == ${boardList.number}+1) ? 'active'">
+                    <a th:href="@{/board/list(page=${page})}" th:text="${page}">
+                        <span class="sr-only"></span>
+                    </a>
+                </li>
+                <li th:style="${boardList.last} ? 'display:none'">
+                    <a th:href="@{/board/list(page=${boardList.number}+2)}">&rsaquo;</a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
